tests/compile-fail/integration_suite__integration__mapfiles__intrinsic_has_insufficient_args.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: bad ABI for intrinsic: not enough arguments
  ┌─ <mapfile>:5:4
  │
5 │ 99 S
  │    ^ not enough arguments


